--- a/trunk/README
+++ b/trunk/README
@@ -114,6 +114,12 @@ This section describes the order (and some criteria) that pages must be in for t
 * Table of Contents Additional pages (Optional - Assumes page is a TOC if it finds "Chapter" or "...<number>" EXAMPLE: "Chapter 2" "...15") - Comes after Table of Contents Page 1
 
 
+Calendar Feed
+=============
+Calendar information comes form a google calender feed. The url to use can be
+obtained by logging into the google account and going to:
+calendar -> (under My Calendars section click the down arrow)
+-> Share this calendar -> Calendar Details -> (under Private Address) -> XML
 
 See also
 ========
