--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,19 +1,20 @@
 CHANGE LOG 
 =================
 
-Version 1.9.1 
+Version 1.10
 -------------
  * Create and populate the vocabularies fedora collection.
  * Add the ability to select partenering agencies for a rollins student.
  * Allow research fields to save 3 items.
 
-1.9 - Fedora 3.4 migration, January 2011
+1.9 - Fedora 3.4 migration, February 2011
 -----------------------------------------
-* RELS-EXT, MODS, MADS, DC,XHTML ,POLICY, and PREMIS datastreams have been
+* RELS-EXT, MODS, MADS, XHTML ,POLICY, and PREMIS datastreams have been
       migrated from inline to managed using fedora-modify-control-group utility
 * ESD graduate-coordinator servlet filter upgraded to work with Fedora 3.4
 *  etdFoxmlToSolr.xslt has been updated to handle indexing inline and managed datastreams.
 * New script for checking datastream checksums in fedora: update_checksums.php
+* When a superuser updates a record, the original netid stays on the record
 
 Version 1.8.6 - January 2011 (minor update)
 -------------------------------------------------------------
