Changes release number and date in site.phtml and added date to CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 CHANGE LOG 
 =================
 
-Version 1.10
+Version 1.10 - Megagnat, March 2011
 -------------
 * RSPH authors may select partnering agencies from a controlled vocabulary
 * A developer can automatically create a fedora collection for an object that requires a SKOS collection
