--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,37 +1,19 @@
 CHANGE LOG 
 =================
 
-Version 1.10 - Megagnat, March 2011
--------------
-* RSPH authors may select partnering agencies from a controlled vocabulary
-* A developer can automatically create a fedora collection for an object that requires a SKOS collection
-* When entering committee members, the auto populate feature filters the text appropriately
-* Improved error message, on contact info page
-* An author can add a non-emory thesis adviser using the committee form
-* An author can select 3 research fields or partnering agency fields on a newly submitted etd
-* A Rollins “super admin” I can see all submissions to Rollins
-* An admin's embargo duration is now validated aginst the author's request
-* A grad admin can access "Export email addresses for approved records" report and receives data for Laney Graduate School only
-* Corrected bug with submisison validation when committee members are optional
-* It is now indicated Committee Chair and Thesis Advisor are the same thing
-* Honors admins receive copies of messages sent to students regarding changes they need to make
-* An ETD admin can edit and revise ETD events in a google calendar and have upcoming events dynamically appear on the ETD site homepage
-* Some email text has been revised
-* A user can download large files using the fedora 3.4 REST API
-* Research field is now required for Undergrad
-
 1.9.1 - Xacml Policy Update , February 2011
 -------------------------------------------
-* Update policy for published etd files so that guest can download pdf and supplemental files.
-
+* Update policy for published etd files.
+      
+      
 1.9 - Fedora 3.4 migration, February 2011
 -----------------------------------------
-* RELS-EXT, MODS, MADS, XHTML ,POLICY, and PREMIS datastreams have been
+* RELS-EXT, MODS, MADS, DC,XHTML ,POLICY, and PREMIS datastreams have been
       migrated from inline to managed using fedora-modify-control-group utility
 * ESD graduate-coordinator servlet filter upgraded to work with Fedora 3.4
 *  etdFoxmlToSolr.xslt has been updated to handle indexing inline and managed datastreams.
 * New script for checking datastream checksums in fedora: update_checksums.php
-* When a superuser updates a record, the original netid stays on the record
+
 
 Version 1.8.6 - January 2011 (minor update)
 -------------------------------------------------------------
