--- a/branches/release_1.10.x/CHANGELOG
+++ b/branches/release_1.10.x/CHANGELOG
@@ -19,6 +19,7 @@ Version 1.10 - Megagnat, March 2011
 * Some email text has been revised
 * A user can download large files using the fedora 3.4 REST API
 * Research field is now required for Undergrad
+* Added logic to disable submit buttons (where possible) after the first click so info is not submitted twice
 
 1.9.1 - Xacml Policy Update , February 2011
 -------------------------------------------
