--- a/branches/release_1.10.x/CHANGELOG
+++ b/branches/release_1.10.x/CHANGELOG
@@ -20,6 +20,8 @@ Version 1.10 - Megagnat, March 2011
 * A user can download large files using the fedora 3.4 REST API
 * Research field is now required for Undergrad
 * Added logic to disable submit buttons (where possible) after the first click so info is not submitted twice
+* Removed BCC of lis-serve for Approval, Publish and Embargo Warning emails
+* Fixed bug that caused etd to go back to draft when change request was clicked but before email was sent.
 
 1.9.1 - Xacml Policy Update , February 2011
 -------------------------------------------
