--- a/branches/release_1.10.x/README
+++ b/branches/release_1.10.x/README
@@ -120,6 +120,7 @@ Calendar information comes form a google calender feed. The url to use can be
 obtained by logging into the google account and going to:
 calendar -> (under My Calendars section click the down arrow)
 -> Share this calendar -> Calendar Details -> (under Private Address) -> XML
+you must change the last part of the url from "basic" to "full"
 
 See also
 ========
