--- a/branches/release_1.10.x/CHANGELOG
+++ b/branches/release_1.10.x/CHANGELOG
@@ -1,5 +1,8 @@
 CHANGE LOG 
 =================
+Version 1.10.1 - March 2011 (bugfix)
+-------------
+* Modified admin checking to allow multiple department names
 
 Version 1.10 - Megagnat, March 2011
 -------------
