--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 CHANGE LOG 
 =================
+Version 1.10.2 - April 2011 (enhancement)
+-------------
+* Modified config file schools.xml to allow a new admin asst departmental access.
+* The gsearch index has changed to now use risearch to reduce the log output.
+
 Version 1.10.1 - March 2011 (bugfix)
 -------------
 * Modified admin checking to allow multiple department names
