--- a/trunk/CHANGELOG
+++ b/trunk/CHANGELOG
@@ -1,5 +1,14 @@
 CHANGE LOG 
 =================
+Version 1.10.4 - April 2011 (add proxy)
+---------------------------------------
+* Proxying HTTP requests for XML schemas used in validation is now
+  supported in XmlObject.  If you define an appropriate HTTP_PROXY
+  environment variable, it will be used for schema validation.  To set
+  this via apache conf, use something like this::
+
+  SetEnv HTTP_PROXY tcp://my.proxy.server:3128/
+
 Version 1.10.3 - April 2011 (bugfix)
 -------------------------------------
 * Created a local copy of cs-xacml-schema-policy-01.xsd.
