--- a/trunk/CHANGELOG
+++ b/trunk/CHANGELOG
@@ -1,6 +1,6 @@
 CHANGE LOG 
 =================
-Version 1.10.6 - July 2011 (bugfix)
+Version 1.11 - July 2011
 ---------------------------------------
 * Improved PDF Processing on Advisor prefixes. 
 * Improved PDF Processing on Abstract data. 
