--- a/branches/release_1.12/CHANGELOG
+++ b/branches/release_1.12/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGE LOG 
 =================
 
+Version 1.12.4 - January 2012
+---------------------------------------
+* Bugfix for empty embargo duration.
+
 Version 1.12.3 - January 2012
 ---------------------------------------
 * Bugfix for no embargo notification emails in 2012.
