Create a tag for release 1.12.4 to include the embargo duration fix. Also allow all versions of firefox.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
 CHANGE LOG 
 =================
 
+Version 1.12.4 - January 2012
+---------------------------------------
+* Bugfix for empty embargo duration.
+* Allow all versions of Firefox.
+
 Version 1.12.3 - January 2012
 ---------------------------------------
 * Bugfix for no embargo notification emails in 2012.
