[#26884267] added migrations to add new program and ADAP

--- a/branches/release_1.12/CHANGELOG
+++ b/branches/release_1.12/CHANGELOG
@@ -1,6 +1,11 @@
 CHANGE LOG 
 =================
 
+Version 1.12.5 - March 2012
+---------------------------------------
+* Added  Applied Public Health Informatics program to Career Masters of Public Health department in Rollins
+* Added Melissa Krancer as ADAP for above program
+
 Version 1.12.4 - January 2012
 ---------------------------------------
 * Bugfix for empty embargo duration.
