Updated change log and site version / date

--- a/branches/release_1.12/CHANGELOG
+++ b/branches/release_1.12/CHANGELOG
@@ -1,9 +1,10 @@
 CHANGE LOG 
 =================
 
-Version 1.12.5 - March 2012
+Version 1.12.5 - April 2012
 ---------------------------------------
 * Added  Applied Public Health Informatics program to Career Masters of Public Health department in Rollins
+* Added  Bioethics program to Grad School
 * Added Melissa Krancer as ADAP for above program
 
 Version 1.12.4 - January 2012
