--- a/trunk/CHANGELOG
+++ b/trunk/CHANGELOG
@@ -1,6 +1,14 @@
 CHANGE LOG 
 =================
 
+Version 1.13 (preliminary)
+---------------------------------------
+
+* Thesis record information and file information edit forms no longer
+  use XForms; all XForm code has been removed from the site.
+* Help request form has been updated to use jQuery instead of Dojo.
+
+
 Version 1.12.5 - April 2012
 ---------------------------------------
 * Added  Applied Public Health Informatics program to Career Masters of Public Health department in Rollins
