bugfix for table of contents display

--- a/branches/release_1.13/CHANGELOG
+++ b/branches/release_1.13/CHANGELOG
@@ -1,6 +1,13 @@
 CHANGE LOG
 =================
 
+
+Version 1.13.1
+------------
+
+* Bugfix: display table of contents even if user does not have permission
+  to edit table of contents.
+
 Version 1.13
 ------------
 
