changed logic to make original ETD owner stick on files that are uploaded by admin

--- a/branches/release_1.15/CHANGELOG
+++ b/branches/release_1.15/CHANGELOG
@@ -5,6 +5,7 @@ CHANGE LOG
 Version 1.15.0
 --------------
 * Removed "by April 22, 2010" in email template
+* Modified code to keep original ETD owner when admin uploads new file
 
 
 Version 1.14.1
