--- a/branches/release_1.15/CHANGELOG
+++ b/branches/release_1.15/CHANGELOG
@@ -9,7 +9,8 @@ Version 1.15.0
 * Fixed mime-type when uploading Word file
 * Added mime-type mappings for rar and gzip files
 * Fixed IE bug to correct placement of auto-complete pop-ups
-* Updated Screening Questions.
+* Updated Screening Questions
+* Added Intro page to submission process 
 
 
 Version 1.14.1
