--- a/branches/reporting/CHANGELOG
+++ b/branches/reporting/CHANGELOG
@@ -11,6 +11,7 @@ Version 1.15.0
 * Fixed IE bug to correct placement of auto-complete pop-ups
 * Updated Screening Questions
 * Added Intro page to submission process 
+* Added custom report page for Admins / ADAPS
 
 
 Version 1.14.1
