added to change log

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGE LOG
 =================
 
+Version 1.15.1
+--------------
+* Made abstract searchable and retrievable in custom report section 
+
 
 Version 1.15.0
 --------------
