changes to email templates for embargos

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,11 @@ CHANGE LOG
 
 Version 1.15.1
 --------------
+* Changes to embargo email templates
+
+
+Version 1.15.1
+--------------
 * Made abstract searchable and retrievable in custom report section 
 
 
